syntax = "proto3";

package sushii.guild.config;

import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";

service GuildConfigService {
  rpc Get(GetGuildConfigRequest) returns (GetGuildConfigResponse);
  rpc Update(UpdateGuildConfigRequest) returns (UpdateGuildConfigResponse);
  rpc Create(CreateGuildConfigRequest) returns (CreateGuildConfigResponse);
}

// Get
message GetGuildConfigRequest { string id = 1; }
message GetGuildConfigResponse { GuildConfig config = 1; }

// Update()
message UpdateGuildConfigRequest {
  GuildConfig guild = 1;
  google.protobuf.FieldMask update_mask = 2;
}
message UpdateGuildConfigResponse {}

// Create()
message CreateGuildConfigRequest { string id = 1; }
message CreateGuildConfigResponse {}

message GuildConfig {
  string id = 1;
  optional string prefix = 2;
  optional string join_msg = 3;
  bool join_msg_enabled = 4;

  optional string join_react = 5;
  optional string leave_msg = 6;
  bool leave_msg_enabled = 7;

  optional string msg_channel = 8;

  bool invite_guard = 9;

  optional string log_msg = 10;
  bool log_msg_enabled = 11;

  optional string log_mod = 12;
  bool log_mod_enabled = 13;

  optional string log_member = 14;
  bool log_member_enabled = 15;

  optional string mute_role = 16;
  optional string mute_duration = 17;

  optional string warn_dm_text = 18;
  bool warn_dm_enabled = 19;

  optional string mute_dm_text = 20;
  bool mute_dm_enabled = 21;

  optional string max_mention = 22;
  repeated string disabled_channels = 23;
}
